styling fixes on header items, padding fix on items with no collapse arrow

--- a/src/components/Headings.css
+++ b/src/components/Headings.css
@@ -1,3 +1,8 @@
+/* TODO: make this dynamically updated by user settings so they can set font size themselves */
+:root {
+    --user-height: 11px;
+}
+
 .headings ul .hidden {
     display: none;
 }
@@ -6,6 +11,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    height: calc(2 * var(--user-height));
+    /* background-color: green; */
 }
 
 .headings .heading-arrow-container:hover .heading-chevron-button svg {
@@ -14,12 +21,18 @@
 
 .headings h1 {
     color: #fff;
-    font-size: 8pt;
+    /* font-size: 8pt; */
+    font-size: var(--user-height);
     font-weight: 400;
-    margin-left: 0.5rem;
+    margin-left: 4px;
+    white-space: nowrap; /* Prevents the text from wrapping */
+    overflow: hidden; /* Hides the overflow text */
+    text-overflow: ellipsis; /* Shows ellipsis when the text is truncated */
+    /* width: 80px; */
+    /* color: white; */
 }
 
-.headings .heading1 {
+/* .headings .heading1 {
     padding-left: 0;
 }
 .headings .heading2 {
@@ -39,10 +52,12 @@
 }
 .headings .heading7 {
     padding-left: 192px;
-}
+} */
 
 .headings a {
     text-decoration: none !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .heading-chevron-button {
@@ -50,14 +65,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20px;
-    height: 20px;
+    width: 12px;
+    height: 12px;
+    flex-shrink: 0;
 }
 
 .heading-chevron-button svg {
     transform: rotate(270deg);
-    /* transform: rotate(90deg); */
-    fill: transparent;
+    /* fill: transparent; */
+    fill: #414141;
 }
 
 .heading-chevron-button:hover svg {
@@ -65,10 +81,17 @@
 }
 
 .clicked svg {
-    transform: rotate(90deg);
-    /* transform: rotate(270deg); */
+    transform: rotate(180deg);
 }
 
 .headings ul {
     list-style: none;
+}
+
+.zzzzzzzzzzzzz .heading-arrow-container-v2 h1 {
+    white-space: nowrap; /* Prevents the text from wrapping */
+    overflow: hidden; /* Hides the overflow text */
+    text-overflow: ellipsis; /* Shows ellipsis when the text is truncated */
+    width: 80px;
+    color: white;
 }
